Implemented fields tree building, simplified streams