@@ -4,13 +4,12 @@ import dependency_injector.custom_annotations.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class ComponentProcessor {
 
     public List<Class<?>> process(final List<Class<?>> classes) {
         return classes.stream()
             .filter(c -> Optional.ofNullable(c.getAnnotation(Component.class)).isPresent())
-            .collect(Collectors.toList());
+            .toList();
     }
 }
